<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOSU"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/activityMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="619dp"
        android:fontFamily="sans-serif"
        android:text="@string/activity_main_title"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="243dp"
        android:layout_height="69dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="343dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="47dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/createProfileButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityMainTitle" />

    <Button
        android:id="@+id/createProfileButton"
        android:layout_width="243dp"
        android:layout_height="69dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="91dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/new_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>