<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOSU"
    tools:context=".NewProfileActivity">

    <TextView
        android:id="@+id/newProfileTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="619dp"
        android:fontFamily="@font/sacramento"
        android:text="@string/new_profile"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newTeacherButton"
        android:layout_width="243dp"
        android:layout_height="69dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="343dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="47dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/new_teacher"
        app:layout_constraintBottom_toTopOf="@+id/newStudentButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newProfileTitleTextView" />

    <Button
        android:id="@+id/newStudentButton"
        android:layout_width="243dp"
        android:layout_height="69dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="91dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/new_student"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTeacherButton" />
</androidx.constraintlayout.widget.ConstraintLayout>